--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,9 @@ flutter:
     - images/entrence.jpeg
     - images/graveyard.jpeg
     - images/walk.jpeg
+    - audio/trap.mp3
+    - audio/win.mp3
+    - audio/background.mp3
 
   # To add assets to your application, add an assets section, like this:
   # assets:
