--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,9 @@ flutter:
     - audio/trap.mp3
     - audio/win.mp3
     - audio/background.mp3
+    - audio/trap.ogg
+    - audio/win.ogg
+    - audio/background.ogg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
